--- a/Culture.html
+++ b/Culture.html
@@ -5,9 +5,8 @@
 <link rel="stylesheet" type="text/css" href="CSS/nav.CSS" />
 <link rel="stylesheet" type="text/css" href="CSS/mian1.CSS" />
 <link rel="stylesheet" type="text/css" href="CSS/card.CSS" />
-<title>无标题文档</title>
+<title>特色文化</title>
 </head>
-
 <body>
 <div>
 	<div>
