--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="main" align="center">
 			<h2>相关资讯</h2>
-			<iframe src="html/video1.html" scrolling="no" width="960" height="540"  frameborder=no />
+			<iframe src="http://player.cntv.cn/flashplayer/players/htmls/smallwindow.html?pid=8a7ac3b73e2d4878b930bb57a0256f57&time=15.315999999999999&tai=tv" scrolling="no" width="960" height="540"  frameborder=no />
 		</div>
 	</div>
 </div>
