--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div>
 	<div>
 	  <ul class="Nav">
-	    	<a href=""><li class="li"><img src="img/LOGO.png" style="height: 55px;margin-left: 5px"></li></a>
-			<li class="li" style="padding-left: 50px"><a href="">主页</a></li>
+	    	<a href="/"><li class="li"><img src="img/LOGO.png" style="height: 55px;margin-left: 5px"></li></a>
+			<li class="li" style="padding-left: 50px"><a href="/">主页</a></li>
 			<li class="li"><a href="">地理位置</a></li>
  			<li class="li"><a href="">历史背景</a></li>
 		  	<li class="li"><a href="">著名人物</a></li>
@@ -27,7 +27,7 @@
 			<a href=""><h3>海陆丰过年习俗</h3></a>
 			<a href=""><h3>白字戏/西秦戏</h3></a>
 			<a href=""><h3>海丰麒麟舞</h3></a>
-			<a href="Culture.html"><h4>查看更多...</h34></a>
+			<a href="Culture.html"><h4>查看更多...</h4></a>
 		</div>
 		<div class="main" align="center">
 			<h2>相关资讯</h2>
